# deepstream_ros2

./: CITATION.cff  LICENSE  README.md
deepstream/: calibration.txt  config_main.txt  deepstream_app_config.txt  labels.txt  msgconv_sample_config.txt
src/deepstream_ros2_bridge_cpp/: CMakeLists.txt  package.xml
src/deepstream_ros2_bridge_cpp/msg/: ObjectDetection.msg
src/deepstream_ros2_bridge_cpp/src/: delay_topic.cpp  object_map_coordinates.cpp
src/deepstream_ros2_bridge_launch/: CMakeLists.txt  package.xml
src/deepstream_ros2_bridge_launch/launch/: launch.py
src/deepstream_ros2_bridge_py/: package.xml  setup.cfg  setup.py
src/deepstream_ros2_bridge_py/deepstream_ros2_bridge_py/: kafka_publisher.py  latency_publisher.py  object_cam_coordinates.py  validation.py
