<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepstream_ros2_bridge_py</name>
  <version>0.0.0</version>
  <description>Deepstream - ROS2 bridge with depth and color data synchronization</description>
  <maintainer email="dmolodenkov@gmail.de">Maladzenkau</maintainer>
  <license>BSD</license>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>deepstream_ros2_bridge_cpp</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
